# claude-code-proxy-rs

./: Cargo.toml  README.md  config.example.yaml
src/: config.rs  error.rs  main.rs  native.rs  oauth.rs  rewriter.rs  routes.rs  server.rs  subprocess.rs
src/adapter/: request.rs  response.rs
src/types/: anthropic.rs
tests/: mock_upstream.py  run_integration.sh  test_config.yaml  test_rewrite_verify.sh
