[package]
name = "claude-code-proxy"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "claude-code-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
sha2 = "0.10"
serde_yaml = "0.9"
rand = "0.9"
regex-lite = "0.1"
base64 = "0.22"
hex = "0.4"
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
